# helio-api-cookbook

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agents.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_cli.py  interactive_cli.py
examples/advanced/: 01_download_mesh.py  02_visualize_mesh.py  03_download_thermal.py  04_plot_thermal.py  README.md
src/helio_api/: __init__.py  auth.py  catalog.py  client.py  download.py  element.py  optimize.py  queries.py  simulate.py  upload.py  visualize.py
tests/: test_client.py  test_workflow_smoke.py
workflows/: README.md
workflows/_template/: README.md  run.py  sample_config.yaml
workflows/fdm_slicers/: README.md
workflows/fdm_slicers/bambu_studio/: README.md
workflows/fdm_slicers/bambu_studio/optimize_with_bounds/: README.md  run.py
workflows/fdm_slicers/bambu_studio/simulate_from_gcode/: README.md  run.py
workflows/fdm_slicers/creality_print/: README.md
workflows/fdm_slicers/orcaslicer/: README.md
workflows/integrations/: README.md
workflows/integrations/adaone_adaxis/: README.md
workflows/large_format_pellet/: README.md
workflows/webapp_dashboard/: README.md
