[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helio-api-cookbook"
version = "0.1.0"
description = "Workflows cookbook for the Helio Additive 3D print simulation and optimization API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["requests>=2.28", "python-dotenv>=1.0"]

[project.optional-dependencies]
thermal = ["pyarrow>=14.0"]
dev = ["pytest>=7.0", "responses>=0.23", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
